--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,16 +1,46 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Define to 1 if you have the <inttypes.h> header file. */
+#undef HAVE_INTTYPES_H
+
+/* Define to 1 if you have the <memory.h> header file. */
+#undef HAVE_MEMORY_H
+
+/* Define to 1 if you have the <stdint.h> header file. */
+#undef HAVE_STDINT_H
+
+/* Define to 1 if you have the <stdlib.h> header file. */
+#undef HAVE_STDLIB_H
+
+/* Define to 1 if you have the <strings.h> header file. */
+#undef HAVE_STRINGS_H
+
+/* Define to 1 if you have the <string.h> header file. */
+#undef HAVE_STRING_H
+
+/* Define to 1 if you have the <sys/stat.h> header file. */
+#undef HAVE_SYS_STAT_H
+
+/* Define to 1 if you have the <sys/types.h> header file. */
+#undef HAVE_SYS_TYPES_H
+
+/* Define to 1 if you have the <unistd.h> header file. */
+#undef HAVE_UNISTD_H
+
 /* Define to 1 if you have the <X11/extensions/dmxext.h> header file. */
 #undef HAVE_X11_EXTENSIONS_DMXEXT_H
 
 /* Define to 1 if you have the <X11/extensions/multibuf.h> header file. */
 #undef HAVE_X11_EXTENSIONS_MULTIBUF_H
 
-/* Define to 1 if you have the <X11/extensions/Print.h> header file. */
-#undef HAVE_X11_EXTENSIONS_PRINT_H
-
 /* Define to 1 if you have the <X11/extensions/record.h> header file. */
 #undef HAVE_X11_EXTENSIONS_RECORD_H
+
+/* Define to 1 if you have the <X11/extensions/Xcomposite.h> header file. */
+#undef HAVE_X11_EXTENSIONS_XCOMPOSITE_H
+
+/* Define to 1 if you have the <X11/extensions/xf86dgaproto.h> header file. */
+#undef HAVE_X11_EXTENSIONS_XF86DGAPROTO_H
 
 /* Define to 1 if you have the <X11/extensions/xf86dgastr.h> header file. */
 #undef HAVE_X11_EXTENSIONS_XF86DGASTR_H
@@ -26,6 +56,9 @@
 
 /* Define to 1 if you have the <X11/extensions/xf86vmode.h> header file. */
 #undef HAVE_X11_EXTENSIONS_XF86VMODE_H
+
+/* Define to 1 if you have the <X11/extensions/xf86vmproto.h> header file. */
+#undef HAVE_X11_EXTENSIONS_XF86VMPROTO_H
 
 /* Define to 1 if you have the <X11/extensions/xf86vmstr.h> header file. */
 #undef HAVE_X11_EXTENSIONS_XF86VMSTR_H
@@ -45,6 +78,9 @@
 /* Define to 1 if you have the <X11/extensions/XShm.h> header file. */
 #undef HAVE_X11_EXTENSIONS_XSHM_H
 
+/* Define to 1 if you have the <X11/extensions/Xxf86dga.h> header file. */
+#undef HAVE_X11_EXTENSIONS_XXF86DGA_H
+
 /* Define to 1 if you have the <X11/XKBlib.h> header file. */
 #undef HAVE_X11_XKBLIB_H
 
@@ -63,6 +99,9 @@
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
 
+/* Define to the home page for this package. */
+#undef PACKAGE_URL
+
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
@@ -74,6 +113,9 @@
 
 /* Patch version of this package */
 #undef PACKAGE_VERSION_PATCHLEVEL
+
+/* Define to 1 if you have the ANSI C header files. */
+#undef STDC_HEADERS
 
 /* Version number of package */
 #undef VERSION
